# Memory

./: .gitignore  CMakeLists.txt  Card.qml  Field.qml  Memory.pro  MyButton.qml  NewGameMenu.qml  ScoreMenu.qml  SessionStatus.qml  dataprovider.cpp  dataprovider.h  logic.cpp  logic.h  main.cpp  main.qml  qml.qrc
